# XJR-Box

./: .docker-compose.yml  Dockerfile  LICENCE.md  README.md  alembic.ini  main.py  piano.db  pyproject.toml  test.db
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml
migrations/: env.py
scr/api/v1/: auth.py  health.py  scripts.py
scr/core/: config.py  di.py  main.py  rate_limit.py  tools.py
scr/databases/: init_db.py  session.py
scr/models/: execution.py  script.py  token.py  user_login.py  user_model.py  user_register.py  user_responce.py
scr/repositories/: scripts_repository.py  user_repository.py
scr/schemas/: execution.py  script.py  user.py
scr/services/: auth.py  email.py  rate_limit.py  redis.py  scheduler.py  script.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  ui.js  utils.js
tests/: conftest.py  run_tests.py
tests/integration/: test_auth_api.py  test_rate_limit.py  test_scripts_api.py
tests/unit/: test_auth_service.py  test_script_service.py
